nova_tests/negative_capability/blocking_no_effect.nv
// EXPECT_COMPILE_ERROR D172-block-form-removed
//
// Plan 83.3 Ф.4.1 (D50): `blocking { }` уводит leaf-блокирующую работу
// в libuv threadpool и suspend'ит fiber. Поэтому он разрешён только в
// функциях, чья сигнатура объявляет эффект `Blocking`. Здесь функция
// эффект не объявляет — compile error.

module negative_capability.blocking_no_effect

fn no_effect_blocking(n int) -> int {
    mut r = 0
    blocking {
        r = n + 1
    }
    r
}
